# libimath

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  cleanup  configure  configure.ac  cran-comments.md
R/: api.R
inst/: COPYRIGHTS
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  imath-info.c  imath-info.cpp
tools/: config.R  write-runtime-metadata.R
tools/config/: cleanup.R  configure.R
